--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "@ultraq/transition",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "DIY transitions in JavaScript",
 	"author": "Emanuel Rabina <emanuelrabina@gmail.com>",
 	"repository": {
 		"type": "git",
-		"url": "https://github.dev.xero.com/ultraq/transition.git"
+		"url": "https://github.com/ultraq/transition.git"
 	},
 	"keywords": [
 		"javascript",
